--- a/public/style.css
+++ b/public/style.css
@@ -1,3 +1,15 @@
 body {
   font-family: sans-serif;
 }
+
+.feed-panel {
+  margin: auto;
+  width: 50%;
+  padding: 5px;
+  border-bottom: 1px solid lightgray
+}
+
+.feed-item {
+  padding: 10px;
+  border-top: 1px solid lightgray
+}
