--- a/public/style.css
+++ b/public/style.css
@@ -1,15 +1,40 @@
 body {
   font-family: sans-serif;
+  font-size: 12px;
+}
+
+input {
+  font-size: 12px;
+}
+
+textarea {
+  display: block;
+  font-size: 12px;
+  resize: none;
+  width: 20em;
+  height: 10em;
+}
+
+.ask-box {
+  display: inline-block;
+  vertical-align: top;
+  width: 30%
 }
 
 .feed-panel {
-  margin: auto;
-  width: 50%;
+  display: inline-block;
+  width: 55%;
   padding: 5px;
-  border-bottom: 1px solid lightgray
+  margin-left: 10%;
 }
 
 .feed-item {
-  padding: 10px;
+  display: inline-block;
+  width: 55%;
+  padding: 10px 40px;
   border-top: 1px solid lightgray
+}
+
+.feed-item:last-child {
+  border-bottom: 1px solid lightgray
 }
